# web-conductor

./: .gitignore  LICENSE.txt  README.md  ansible.cfg  docker-compose-000.yaml  docker-compose.yaml  down.sh  download-dashboards.sh  example.inventory.yml  fetch.sh  main.yml  up-build.sh  up.sh  web-conductor.py
files/: .env.j2  .gitignore  compose.base.yml  compose.home.yml  compose.metrics.yml  compose.proxy.yml  compose.telemetry.yml  compose.vpn.yml  config.yml.j2  docker-compose-000.yaml  download-dashboards.sh  fetch.sh  pyproject.toml  requirements.txt.j2  test.py  web-conductor.py
files/configs/grafana/: grafana.ini
files/configs/homepage/: bookmarks.yaml.j2  custom.css  custom.js.j2  services.yaml  settings.yaml.j2  widgets.yaml.j2
files/configs/loki/: config.yaml
files/configs/prometheus/: prometheus.yml
files/configs/wireguard/coredns/: Corefile.j2
files/scripts/: grafana-dash-down.sh  repo-update.sh  run-pytest.sh  wireguard-rsync.sh
files/secrets/: traefik_auth_users.j2  traefik_htpasswd.j2
files/services/limbo/: main.go
files/services/traefik/: Dockerfile  bootstrap.sh  traefik.toml
files/services/traefik/dynamic/: traefik.toml
files/src/: __init__.py  __main__.py  bash.py  certs.py  compose.py  config.py  labels.py  models.py  traefik.py  utils.py  volume.py  workspace.py
files/tests/: __main__.py  conftest.py  test_certs.py  test_compose.py
files/tests/__snapshots__/: test_certs.ambr  test_compose.ambr
files/tests/fixtures/: compose.proxy.yml  config.yml  user
files/tests/fixtures/user/: compose.proxy.yml  compose.user.yml
(+24 files in other folders)
