[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "web-conductor"
dependencies = [
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "syrupy",
]

[tool.setuptools.package-dir]
"web_conductor" = "src"

[project.scripts]
web-conductor = "web_conductor:main"
